Finish first 4 pages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <br>
                   <h4 class="card-text">La herramienta para encontrar profesionales de la Salud Mental y los recursos que te ayudaran a convertirte en la mejor version de ti mismx mientras te sientes apoyadx en el camino</h4>
                   <br>
-                  <a href="./singup.html" class="btn btn-primary">¡Registrarse!</a>
+                  <a href="./singup.html" class="button-main">¡Registrarse!</a>
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-6">
