--- a/form.html
+++ b/form.html
@@ -1,118 +1,278 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DesestresaTec</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DesestresaTec</title>
 
-        <!-- Boostrap CSS -->
-        <link rel="stylesheet" href="./sass/custom.css">
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    </head>
+    <!-- Boostrap CSS -->
+    <link rel="stylesheet" href="./sass/custom.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-    <body>
+  <body>
+    <div class="container-fluid">
+      <!-- NavBar -->
+      <nav
+        class="navbar navbar-expand-lg navbar-light"
+        style="background-color: #e3f2fd"
+      >
         <div class="container-fluid">
-
-        <!-- NavBar -->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html">DesestresaTec</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="./about.html">Sobre Nosotros</a>
+          <a class="navbar-brand" href="./index.html">DesestresaTec</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="./about.html">Sobre Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./resources.html"
+                  >Recursos Adicionales</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle active"
+                  href="#"
+                  id="navbarDropdownMenuLink"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Usuario
+                </a>
+                <ul
+                  class="dropdown-menu"
+                  aria-labelledby="navbarDropdownMenuLink"
+                >
+                  <li>
+                    <a class="dropdown-item active" href="./form.html"
+                      >Formulario</a
+                    >
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./resources.html">Recursos Adicionales</a>
+                  <li>
+                    <a class="dropdown-item" href="./people.html"
+                      >Profesionales</a
+                    >
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Usuario
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item active" href="./form.html">Formulario</a></li>
-                      <li><a class="dropdown-item" href="./people.html">Profesionales</a></li>
-                      <li><a class="dropdown-item" href="./userinfo.html">Perfil</a></li>
-                    </ul>
+                  <li>
+                    <a class="dropdown-item" href="./userinfo.html">Perfil</a>
                   </li>
                 </ul>
-              </div>
-            </div>
-          </nav> 
-          <br>
-
-          <!-- Information and Body -->
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-              </div>
-              <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-              </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-
-            <!-- Footer -->
-            <footer class="pt-4 my-md-5 pt-md-5 border-top">
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-3">
-                        <small class="d-block mb-3 text-muted d-flex justify-content-center">&copy; 2022</small>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-3">
-                        <h5 class="d-flex justify-content-center">Sobre Nosotros</h5>
-                        <ul class="list-unstyled text-small ">
-                            <li><a class="text-muted d-flex justify-content-center" href="./about.html">DesestresaTec como Idea</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./about.html">Gustavo Vasquez</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./about.html">Javier Mendieta</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-3">
-                        <h5 class="d-flex justify-content-center">Recursos Adicionales</h5>
-                        <ul class="list-unstyled text-small">
-                            <li><a class="text-muted d-flex justify-content-center" href="./resources.html">Bibliografia</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./resources.html">Online</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-3">
-                        <h5 class="d-flex justify-content-center">Usuario</h5>
-                        <ul class="list-unstyled text-small">
-                            <li><a class="text-muted d-flex justify-content-center" href="./form.html">Formulario</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./people.html">Profesionales</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./userinfo.html">Perfil</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </footer>
-
+              </li>
+            </ul>
           </div>
+        </div>
+      </nav>
+      <br />
 
-    </body>
+      <!-- Information and Body -->
+      <div class="container mt-sm-5 my-1">
+        <div class="question ml-sm-5 pl-sm-5 pt-2">
+          <div class="py-2 h5">
+            <b
+              >Durante las últimas 2 semanas, ¿con qué frecuencia ha sentido
+              molestias por los siguientes problemas?</b
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="container mt-sm-5 my-1">
+        <div class="question ml-sm-5 pl-sm-5 pt-2">
+          <div class="py-2 h5">
+            <b>1. Tener poco interés o placer en hacer las cosas</b>
+          </div>
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Nunca</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Varios dias</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Mas de la mitad de los dias </label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Casi todos los dias </label>
+          </div>
+        </div>
+      </div>
+
+      <div class="container mt-sm-5 my-1">
+        <div class="question ml-sm-5 pl-sm-5 pt-2">
+          <div class="py-2 h5">
+            <b>2. Sentirse desanimado/a, deprimido/a, o sin esperanza</b>
+          </div>
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Nunca</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Varios dias</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Mas de la mitad de los dias </label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Casi todos los dias </label>
+          </div>
+        </div>
+      </div>
+
+      <div class="container mt-sm-5 my-1">
+        <div class="question ml-sm-5 pl-sm-5 pt-2">
+          <div class="py-2 h5">
+            <b
+              >3. Con problemas en dormirse o en mantenerse dormido/a, o en
+              dormir demasiado</b
+            >
+          </div>
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Nunca</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Varios dias</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Mas de la mitad de los dias </label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Casi todos los dias </label>
+          </div>
+        </div>
+      </div>
+
+      <div class="container mt-sm-5 my-1">
+        <div class="question ml-sm-5 pl-sm-5 pt-2">
+          <div class="py-2 h5">
+            <b>4. Sentirse cansado/a o tener poca energía</b>
+          </div>
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Nunca</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Varios dias</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Mas de la mitad de los dias </label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Casi todos los dias </label>
+          </div>
+        </div>
+      </div>
+
+      <div class="container mt-sm-5 my-1">
+        <div class="question ml-sm-5 pl-sm-5 pt-2">
+          <div class="py-2 h5">
+            <b>5. Tener poco apetito o comer en exceso</b>
+          </div>
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Nunca</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Varios dias</label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Mas de la mitad de los dias </label> <br />
+            <input type="radio" name="radio" /> <span class="checkmark"></span>
+            <label class="options">Casi todos los dias </label>
+          </div>
+        </div>
+      </div>
+
+      <div class="container mt-sm-5 my-1">
+        <div class="question ml-sm-5 pl-sm-5 pt-2">
+          <a href="./people.html" class="btn btn-primary">Finalizar</a>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <small class="d-block mb-3 text-muted d-flex justify-content-center"
+              >&copy; 2022</small
+            >
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-3">
+            <h5 class="d-flex justify-content-center">Sobre Nosotros</h5>
+            <ul class="list-unstyled text-small">
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./about.html"
+                  >DesestresaTec como Idea</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./about.html"
+                  >Gustavo Vasquez</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./about.html"
+                  >Javier Mendieta</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-3">
+            <h5 class="d-flex justify-content-center">Recursos Adicionales</h5>
+            <ul class="list-unstyled text-small">
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./resources.html"
+                  >Bibliografia</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./resources.html"
+                  >Online</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-3">
+            <h5 class="d-flex justify-content-center">Usuario</h5>
+            <ul class="list-unstyled text-small">
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./form.html"
+                  >Formulario</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./people.html"
+                  >Profesionales</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./userinfo.html"
+                  >Perfil</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
