--- a/userinfo.html
+++ b/userinfo.html
@@ -46,6 +46,24 @@
 
           <!-- Information and Body -->
 
+          <div class="userin-section text-center bg-light mb-12">
+            <div class="row">
+              <div class="col-sm-12 col-md-6 col-lg-6">
+                <div class="card-body">
+                  <h1 class="card-title">Informacion de Usuario:</h1>
+                  <br>
+                  <h2 class = "card-title">Nombre:</h2>
+                  <h2 class = "card-subtitle mb-2 text-muted">Javier Mendieta</h2>
+                  <h2 class = "card-title">Mail:</h2>
+                  <h2 class = "card-subtitle mb-2 text-muted">a01657253@tec.mx</h2>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-6">
+                <img src="./images/empty.png" class="img-fluid rounded-start" alt="Mascota de la Universidad: Teus">
+              </div>
+            </div>
+          </div>
+
             <!-- Footer -->
             <footer class="pt-4 my-md-5 pt-md-5 border-top">
                 <div class="row">
