finished last 3 pages

--- a/userinfo.html
+++ b/userinfo.html
@@ -59,7 +59,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-6">
-                <img src="./images/empty.png" class="img-fluid rounded-start" alt="Mascota de la Universidad: Teus">
+                <img src="./images/dummy.png" class="img-fluid rounded-start" alt="temp">
               </div>
             </div>
           </div>
