last pages done

--- a/singup.html
+++ b/singup.html
@@ -49,21 +49,21 @@
               <h2>User Creation</h2>
               <div class = "row">
                 <div class = "col">
-                  <label for="inputName">First Name</label>
-                  <input type="text" class="form-control" id = "inputName" placeholder="First Name">
+                  <label for="inputName">Nombre</label>
+                  <input type="text" class="form-control" id = "inputName" placeholder="Nombre">
                 </div>
                 <div class = "col">
-                  <label for="inputLName">Last Name</label>
-                  <input type="text" class="form-control" id = "inputLName" placeholder="Last Name">
+                  <label for="inputLName">Apellido</label>
+                  <input type="text" class="form-control" id = "inputLName" placeholder="Apellido">
                 </div>
               </div>
                   <label for="inputMail">Mail</label>
                   <input type="email" class = "form-control" id = "inputMail" placeholder="Mail">
-                  <label for="inputPass">Password</label>
-                  <input type="password" class = "form-control" id = "inputPass" placeholder="Password">
+                  <label for="inputPass">Contraseña</label>
+                  <input type="password" class = "form-control" id = "inputPass" placeholder="Contraseña">
                 
                   <br>
-                  <label for="inputPicture">Upload a profile picture</label>
+                  <label for="inputPicture">Sube una foto de perfil</label>
                   <input type="file" class="form-control-file" id="inputPicture">
                   <br><br>
                   <button type="submit" class="btn btn-primary">Submit</button>
