--- a/resources.html
+++ b/resources.html
@@ -46,7 +46,8 @@
 
         
         <div class = "resources-section col-sm-12 col-md-12 col-lg-12">
-          <h1 style="text-align: center;">Helpful links</h1> 
+          <h1 style="text-align: center;">Recursos Adicionales</h1> 
+          <p>Aqui puedes encontrar links utiles como libros o videos para poder aprender más de salud mental</p>
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-6 col-lg-6">
@@ -57,7 +58,7 @@
                   <br>
                   <h2>"This Too Shall Pass"</h2>
                   <p>Julia Samuel.</p>
-                  <p><a href="https://www.amazon.com/-/es/dp/0241348862" target="_blank" class="button">Go to video</a></p>
+                  <p><a href="https://www.amazon.com/-/es/dp/0241348862" target="_blank" class="button">Ir al video</a></p>
               </div>
               </div>
           </div>
@@ -69,7 +70,7 @@
                   <br>
                   <h2>"This Too Shall Pass"</h2>
                   <p>Julia Samuel.</p>
-                  <p><a href="https://www.amazon.com/-/es/dp/0241348862" target="_blank" class="button">Buy the book</a></p>
+                  <p><a href="https://www.amazon.com/-/es/dp/0241348862" target="_blank" class="button">Compra el libro</a></p>
               </div>
               </div>
           </div>
@@ -81,7 +82,7 @@
                   <br>
                   <h2>"This Too Shall Pass"</h2>
                   <p>Julia Samuel.</p>
-                  <p><a href="https://www.amazon.com/-/es/dp/0241348862" target="_blank" class="button">Go to video</a></p>
+                  <p><a href="https://www.amazon.com/-/es/dp/0241348862" target="_blank" class="button">Ir al video</a></p>
               </div>
               </div>
           </div>
@@ -93,7 +94,7 @@
                   <br>
                   <h2>"Maybe You Should Talk to Someone"</h2>
                   <p>Lori Gottlieb.</p>
-                  <p><a href="https://www.amazon.com/-/es/dp/0241348862" target="_blank" class="button">Buy the book</a></p>
+                  <p><a href="https://www.amazon.com/-/es/dp/0241348862" target="_blank" class="button">Compra el libro</a></p>
               </div>
               </div>
           </div>
