--- a/singup.html
+++ b/singup.html
@@ -46,7 +46,7 @@
           <!-- Information and Body -->
           <div class = "signup-section col-sm-12 col-md-12 col-lg-12">
             <form>
-              <h2>User Creation</h2>
+              <h2>Creacion de Usuario</h2>
               <div class = "row">
                 <div class = "col">
                   <label for="inputName">Nombre</label>
@@ -62,11 +62,10 @@
                   <label for="inputPass">Contraseña</label>
                   <input type="password" class = "form-control" id = "inputPass" placeholder="Contraseña">
                 
-                  <br>
-                  <label for="inputPicture">Sube una foto de perfil</label>
+                  <label for="inputPicture">Sube una foto de perfil</label><br>
                   <input type="file" class="form-control-file" id="inputPicture">
                   <br><br>
-                  <button type="submit" class="btn btn-primary">Submit</button>
+                  <a href="./userinfo.html" class="btn btn-primary">Crear Usuario</a>
             </form>
           </div>
               
