--- a/form.html
+++ b/form.html
@@ -98,15 +98,15 @@
           <div class="py-2 h5">
             <b>1. Tener poco interés o placer en hacer las cosas</b>
           </div>
-          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options1">
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Nunca</label> <br />
+            <label class="options1">Nunca</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Varios dias</label> <br />
+            <label class="options1">Varios dias</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Mas de la mitad de los dias </label> <br />
+            <label class="options1">Mas de la mitad de los dias </label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Casi todos los dias </label>
+            <label class="options1">Casi todos los dias </label>
           </div>
         </div>
       </div>
@@ -116,15 +116,15 @@
           <div class="py-2 h5">
             <b>2. Sentirse desanimado/a, deprimido/a, o sin esperanza</b>
           </div>
-          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options2">
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Nunca</label> <br />
+            <label class="options2">Nunca</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Varios dias</label> <br />
+            <label class="options2">Varios dias</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Mas de la mitad de los dias </label> <br />
+            <label class="options2">Mas de la mitad de los dias </label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Casi todos los dias </label>
+            <label class="options2">Casi todos los dias </label>
           </div>
         </div>
       </div>
@@ -137,15 +137,15 @@
               dormir demasiado</b
             >
           </div>
-          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options3">
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Nunca</label> <br />
+            <label class="options3">Nunca</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Varios dias</label> <br />
+            <label class="options3">Varios dias</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Mas de la mitad de los dias </label> <br />
+            <label class="options3">Mas de la mitad de los dias </label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Casi todos los dias </label>
+            <label class="options3">Casi todos los dias </label>
           </div>
         </div>
       </div>
@@ -155,15 +155,15 @@
           <div class="py-2 h5">
             <b>4. Sentirse cansado/a o tener poca energía</b>
           </div>
-          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options4">
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Nunca</label> <br />
+            <label class="options4">Nunca</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Varios dias</label> <br />
+            <label class="options4">Varios dias</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Mas de la mitad de los dias </label> <br />
+            <label class="options4">Mas de la mitad de los dias </label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Casi todos los dias </label>
+            <label class="options4">Casi todos los dias </label>
           </div>
         </div>
       </div>
@@ -173,15 +173,15 @@
           <div class="py-2 h5">
             <b>5. Tener poco apetito o comer en exceso</b>
           </div>
-          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
+          <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options5">
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Nunca</label> <br />
+            <label class="options5">Nunca</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Varios dias</label> <br />
+            <label class="options5">Varios dias</label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Mas de la mitad de los dias </label> <br />
+            <label class="options5">Mas de la mitad de los dias </label> <br />
             <input type="radio" name="radio" /> <span class="checkmark"></span>
-            <label class="options">Casi todos los dias </label>
+            <label class="options5">Casi todos los dias </label>
           </div>
         </div>
       </div>
