--- a/userinfo.html
+++ b/userinfo.html
@@ -1,102 +1,190 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DesestresaTec</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DesestresaTec</title>
 
-        <!-- Boostrap CSS -->
-        <link rel="stylesheet" href="./sass/custom.css">
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    </head>
+    <!-- Boostrap CSS -->
+    <link rel="stylesheet" href="./sass/custom.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-    <body>
+  <body>
+    <div class="container-fluid">
+      <!-- NavBar -->
+      <nav
+        class="navbar navbar-expand-lg navbar-light"
+        style="background-color: #e3f2fd"
+      >
         <div class="container-fluid">
-
-        <!-- NavBar -->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html">DesestresaTec</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="./about.html">Sobre Nosotros</a>
+          <a class="navbar-brand" href="./index.html">DesestresaTec</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="./about.html">Sobre Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./resources.html"
+                  >Recursos Adicionales</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle active"
+                  href="#"
+                  id="navbarDropdownMenuLink"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Usuario
+                </a>
+                <ul
+                  class="dropdown-menu"
+                  aria-labelledby="navbarDropdownMenuLink"
+                >
+                  <li>
+                    <a class="dropdown-item" href="./form.html">Formulario</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./resources.html">Recursos Adicionales</a>
+                  <li>
+                    <a class="dropdown-item" href="./people.html"
+                      >Profesionales</a
+                    >
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Usuario
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="./form.html">Formulario</a></li>
-                      <li><a class="dropdown-item" href="./people.html">Profesionales</a></li>
-                      <li><a class="dropdown-item active" href="./userinfo.html">Perfil</a></li>
-                    </ul>
+                  <li>
+                    <a class="dropdown-item active" href="./userinfo.html"
+                      >Perfil</a
+                    >
                   </li>
                 </ul>
-              </div>
-            </div>
-          </nav> 
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-          <!-- Information and Body -->
+      <!-- Information and Body -->
 
-          <div class="userin-section text-center bg-light mb-12">
-            <div class="row">
-              <div class="col-sm-12 col-md-6 col-lg-6">
-                <div class="card-body">
-                  <h1 class="card-title">Informacion de Usuario:</h1>
-                  <br>
-                  <h2 class = "card-title">Nombre:</h2>
-                  <h2 class = "card-subtitle mb-2 text-muted">Javier Mendieta</h2>
-                  <h2 class = "card-title">Mail:</h2>
-                  <h2 class = "card-subtitle mb-2 text-muted">a01657253@tec.mx</h2>
-                </div>
-              </div>
-              <div class="col-sm-12 col-md-6 col-lg-6">
-                <img src="./images/dummy.png" class="img-fluid rounded-start" alt="temp">
-              </div>
+      <div class="userin-section text-center bg-light mb-12">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="card-body">
+              <h1 class="card-title">Informacion de Usuario:</h1>
+              <br />
+              <h2 class="card-title">Nombre:</h2>
+              <h2 class="card-subtitle mb-2 text-muted">Javier Mendieta</h2>
+              <h2 class="card-title">Mail:</h2>
+              <h2 class="card-subtitle mb-2 text-muted">a01657253@tec.mx</h2>
             </div>
           </div>
-
-            <!-- Footer -->
-            <footer class="pt-4 my-md-5 pt-md-5 border-top">
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-3">
-                        <small class="d-block mb-3 text-muted d-flex justify-content-center">&copy; 2022</small>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-3">
-                        <h5 class="d-flex justify-content-center">Sobre Nosotros</h5>
-                        <ul class="list-unstyled text-small ">
-                            <li><a class="text-muted d-flex justify-content-center" href="./about.html">DesestresaTec como Idea</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./about.html">Gustavo Vasquez</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./about.html">Javier Mendieta</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-3">
-                        <h5 class="d-flex justify-content-center">Recursos Adicionales</h5>
-                        <ul class="list-unstyled text-small">
-                            <li><a class="text-muted d-flex justify-content-center" href="./resources.html">Bibliografia</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./resources.html">Online</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-3">
-                        <h5 class="d-flex justify-content-center">Usuario</h5>
-                        <ul class="list-unstyled text-small">
-                            <li><a class="text-muted d-flex justify-content-center" href="./form.html">Formulario</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./people.html">Profesionales</a></li>
-                            <li><a class="text-muted d-flex justify-content-center" href="./userinfo.html">Perfil</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </footer>
-
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <img
+              src="./images/dummy.png"
+              class="img-fluid rounded-start"
+              alt="temp"
+            />
           </div>
+        </div>
+      </div>
 
-    </body>
+      <!-- Footer -->
+      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <small class="d-block mb-3 text-muted d-flex justify-content-center"
+              >&copy; 2022</small
+            >
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-3">
+            <h5 class="d-flex justify-content-center">Sobre Nosotros</h5>
+            <ul class="list-unstyled text-small">
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./about.html"
+                  >DesestresaTec como Idea</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./about.html"
+                  >Gustavo Vasquez</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./about.html"
+                  >Javier Mendieta</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-3">
+            <h5 class="d-flex justify-content-center">Recursos Adicionales</h5>
+            <ul class="list-unstyled text-small">
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./resources.html"
+                  >Bibliografia</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./resources.html"
+                  >Online</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-3">
+            <h5 class="d-flex justify-content-center">Usuario</h5>
+            <ul class="list-unstyled text-small">
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./form.html"
+                  >Formulario</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./people.html"
+                  >Profesionales</a
+                >
+              </li>
+              <li>
+                <a
+                  class="text-muted d-flex justify-content-center"
+                  href="./userinfo.html"
+                  >Perfil</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
